--- a/EXTORSIA_WEBS/TEAMETSTUDIO.html
+++ b/EXTORSIA_WEBS/TEAMETSTUDIO.html
@@ -10,7 +10,7 @@
 	
 	<nav>
         <div class="logo">
-            <img src="/Users/alex/Documents/EXTORSIA_WEBS/image/LOGO.jpg" width=100px height="50px">
+                    <img src="image/logextr2.png" width="100px">
         </div>
         <div class="onglet">
             <a href="base_jeu.html" target="_BLANK">HOME</a>
@@ -36,7 +36,7 @@
     	</h1>
     </div>
 
-    <img src="/Users/alex/Documents/EXTORSIA_WEBS/image/membrestest.webp" width="100%">
+    <img src="image/membres.jpg" width="100%">
     <div id="ordre">
     	<p>
     		Dans l'ordre de droite a gauche
@@ -120,7 +120,7 @@
         <h1>NOS SERVICES</h1>
         <div class="contact">
             <div class="contact1">
-                <img src="/Users/alex/Documents/EXTORSIA_WEBS/image/LOGOBASE.png" width=90px height="90px">
+                <img src="image/logextr2.png" width=90px height="90px">
             </div>
 
             <div class="contact2">
