--- a/EXTORSIA_WEBS/base_jeu.html
+++ b/EXTORSIA_WEBS/base_jeu.html
@@ -12,7 +12,7 @@
 
     <nav>
         <div class="logo">
-            <img src="/Users/alex/Documents/EXTORSIA_WEBS/image/logextr2.png" width="100px">
+            <img src="image/logextr2.png" width="100px">
         </div>
         <div class="onglet">
             <a href="#">HOME</a>
@@ -29,7 +29,7 @@
 
     <div style="position:relative" id="idk">
         <div id="image1">
-            <img src="/Users/alex/Documents/EXTORSIA_WEBS/image/photo1.jpg" width="100%">
+            <img src="image/photo1.jpg" width="100%">
         </div>
         <div style="position:relative;width: 100%;font-size:200%" class="idk1">
             <center><b>EXTROSIA</b></center>
@@ -71,7 +71,7 @@
         <h1>NOS SERVICES</h1>
         <div class="contact">
             <div class="contact1">
-                <img src="/Users/alex/Documents/EXTORSIA_WEBS/image/LOGOBASE.png" width=90px height="90px">
+                <img src="image/logextr2.png" width=90px height="90px">
             </div>
 
             <div class="contact2">
