--- a/EXTORSIA_WEBS/jeu.html
+++ b/EXTORSIA_WEBS/jeu.html
@@ -10,7 +10,7 @@
 	
 	<nav>
         <div class="logo">
-            <img src="/Users/alex/Documents/EXTORSIA_WEBS/image/LOGO.jpg" width=100px height="50px">
+                    <img src="image/logextr2.png" width="100px">
         </div>
         <div class="onglet">
             <a href="base_jeu.html">HOME</a>
@@ -26,7 +26,7 @@
             <div class="1">
                 <a href="DOWNLOAD.html" target="_BLANK">
                     <h2>MONDE 1</h2>
-                    <img src="/Users/alex/Documents/EXTORSIA_WEBS/image/monde1.jpg" width=200%>
+                    <img src="image/monde1.jpg" width=200%>
                 </a> 
             </div>
             <h2 class="encadrer">
@@ -39,7 +39,7 @@
                 
                 <a href="DOWNLOAD.html" target="_BLANK">
                     <h2>MONDE 2</h2>
-                    <img src="/Users/alex/Documents/EXTORSIA_WEBS/image/monde2.png" width="125%">
+                    <img src="image/monde2.png" width="125%">
                 </a> 
             </div>
             <h2 class="encadrer">
@@ -57,7 +57,7 @@
         <h1>NOS SERVICES</h1>
         <div class="contact">
             <div class="contact1">
-                <img src="/Users/alex/Documents/EXTORSIA_WEBS/image/LOGOBASE.png" width=90px height="90px">
+                <img src="image/logextr2.png" width=90px height="90px">
             </div>
 
             <div class="contact2">
