--- a/EXTORSIA_WEBS/TEAMETSTUDIO.html
+++ b/EXTORSIA_WEBS/TEAMETSTUDIO.html
@@ -4,47 +4,48 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>TEAM & STUDIO</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/team.css">
 </head>
 <body>
 	
-	<nav>
+	<div id = "nav">
         <div class="logo">
                     <img src="image/logextr2.png" width="100px">
         </div>
         <div class="onglet">
-            <a href="base_jeu.html" target="_BLANK">HOME</a>
+            <a href="home.html" target="_self">HOME</a>
             <a href="#">TEAM & STUDIO</a>
-            <a href="jeu.html" target="_BLANK">JEU</a>
-            <a href="DOWNLOAD.html" target="_BLANK">DOWNLOAD</a>
+            <a href="jeu.html" target="_self">A PROPOS</a>
+            <a href="download.html" target="_self">DOWNLOAD</a>
 
         </div>
-    </nav>
+    </div>
 
     <div id="origines">
     	<div class="or">
     		<h1>NOS ORIGINES</h1>
 	    	<p>
-	    		Notre groupe n’ayant pas de genres de jeux-vidéos similaires ,nous avons décidé de créer notre propre jeu regroupant les aspects qui nous plaisent le plus dans nos jeux favoris. Pour cela nous avons intégrer dans notre jeu des  éléments fantastiques, des animations,plusieurs mondes et des portails de téléportation afin de se déplacer entre eux. Nous avons donc fusionner différents styles de jeux de manière harmonieuse pour pouvoir créer à la fin un jeu qui nous ressemble tous.
+	    		Nous avons décidé de créer notre propre jeu regroupant les aspects qui nous plaisent le plus dans nos jeux favoris. Pour cela nous avons intégrer dans notre jeu des  éléments fantastiques, des animations,plusieurs mondes et des portails de téléportation afin de se déplacer entre eux. Nous avons donc fusionner différents styles de jeux de manière harmonieuse pour pouvoir créer à la fin un jeu qui nous ressemble tous.
 	    	</p>
     	</div>
     </div>
 
     <div id="membres">
     	<h1>
-    		MEMBRES :
-    	</h1>
+    		NOS MEMBRES:</h1>
     </div>
 
     <img src="image/membres.jpg" width="100%">
-    <div id="ordre">
-    	<p>
-    		Dans l'ordre de droite a gauche
-    	</p>
-    </div>
-    <div id="toutmembres">
 
-    	<div id="content">
+    <div id="ordre">
+    	<center>
+    		Dans l'ordre de droite a gauche
+		</center>
+    </div>
+	
+    <div id="personnes">
+
+    	<div id="highrow">
 
     		<div class="leftbox">
 	            <h2 class="encadrer">
@@ -72,7 +73,7 @@
 	        </div>
 	    </div>
 
-        <div id="content2">
+        <div id="lowrow">
 
 	        <div class="leftbox">
 	            <h2 class="encadrer">
@@ -99,7 +100,7 @@
 	    </div>
     </div>
     	
-    <div id="studio">
+    <!-- <div id="studio">
     	<div class="objetetude">
     		<h1 class="hello">
     			Objet d'étude
@@ -111,7 +112,7 @@
     			Ce projet étant assez ambitieux, nous n’hésiterons pas à nous entraider et à rester soudés. L’organisation d’ équipe sera un point important de ce projet pour être le plus efficace possible. Nous espérons aller au bout de nos idées afin de créer un jeu intéressant, engageant et amusant.
     		</p>
     	</div>
-    </div>
+    </div> -->
 
 
 
