final commit - everything is fixed 20/20 pls
pls we good

Co-Authored-By: aida-goumble <117944099+aida-goumble@users.noreply.github.com>
Co-Authored-By: gabrielbaraza <120053066+gabrielbaraza@users.noreply.github.com>

--- a/EXTORSIA_WEBS/DOWNLOAD.html
+++ b/EXTORSIA_WEBS/DOWNLOAD.html
@@ -25,7 +25,7 @@
 
 
     <div id=download>
-        <a href="DOWNLOAD.html" target="_BLANK">
+        <a href="Files/Extrosia 1.0 Setup (x64).exe" target="_BLANK">
             <button>DOWNLOAD</button>
         </a>
     </div>
