--- a/EXTORSIA_WEBS/DOWNLOAD.html
+++ b/EXTORSIA_WEBS/DOWNLOAD.html
@@ -22,13 +22,16 @@
 
 
     </nav>
-
-
+   
     <div id=download>
-        <a href="Files/Extrosia 1.0 Setup (x64).exe" target="_BLANK">
+        <a href="Extrosia.zip" target="_BLANK">
             <button>DOWNLOAD</button>
         </a>
     </div>
+    <div id="image1">
+        <img src="Files/guide.png" width="100%">
+    </div>
+
 
 
 
